--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,10 @@ h1 {
   color: red;
 }
 
+.white {
+  color: white;
+}
+
 .btn-primary {
   background: var(--primary-color);
   border: var(--primary-color);
@@ -79,6 +83,10 @@ label {
   border: var(--primary-color) 1.5px solid;
   border-radius: 3px;
   padding: 10px;
+}
+
+#map {
+  height: 100%;
 }
 
 
