--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,10 @@ html {
 }
 
 :root {
-  --primary-color: #ea5a06;
+  --primary-color: #108fc1;
+  --secondary-color: #ecf9fd;
   --black: #000000;
+  --background: #ffffff;
 }
 
 ::-moz-selection {
@@ -40,7 +42,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 body {
-  background: black;
+  background: var(--background);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -70,6 +72,10 @@ h1 {
   background: rgba(255, 255, 255, 0.9);
   border: var(--primary-color) 3px solid;
   border-radius: 5px;
+}
+
+.form-control {
+  background: #ecf9fd;
 }
 
 label {
